# personify

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: mirror.yml
agents/: AGENTS.md  GROWTH.md  sync.sh
architecture/: AGENTS.md  GROWTH.md  sync.sh
bots/: AGENTS.md  sync.sh
crates/frameshift-capabilities/: Cargo.toml
crates/frameshift-capabilities/src/: error.rs  filter.rs  lib.rs  report.rs  tracker.rs  warning.rs
crates/frameshift-cli/: Cargo.toml
crates/frameshift-cli/src/: main.rs  util.rs
crates/frameshift-cli/src/cmd/: automate.rs  diff.rs  feedback.rs  grow.rs  migrate.rs  mod.rs  publish.rs  render.rs  rule.rs  select.rs  skill.rs  use_persona.rs  verify.rs
crates/frameshift-client/: Cargo.toml
crates/frameshift-client/src/: error.rs  lib.rs  model.rs
crates/frameshift-client/tests/: install_flow.rs  project_id_env.rs
crates/frameshift-compose/: Cargo.toml
crates/frameshift-compose/src/: composed.rs  composer.rs  conflict.rs  error.rs  lib.rs  merge.rs  resolver.rs
crates/frameshift-conformance/: Cargo.toml
crates/frameshift-conformance/src/: bundle.rs  caller.rs  case.rs  error.rs  gate.rs  lib.rs  runner.rs  score.rs
crates/frameshift-daemon/: Cargo.toml
crates/frameshift-daemon/src/: error.rs  handler.rs  lib.rs  main.rs  orchestrator.rs  protocol.rs  socket.rs  watcher.rs
crates/frameshift-growth/: Cargo.toml
crates/frameshift-growth/src/: lib.rs
crates/frameshift-mcp/: Cargo.toml
crates/frameshift-mcp/src/: error.rs  lib.rs  main.rs  prompts.rs  protocol.rs  tools.rs
crates/frameshift-memory/: Cargo.toml
crates/frameshift-orchestrator/: Cargo.toml
crates/frameshift-orchestrator/src/: audit.rs  context.rs  controller.rs  error.rs  feedback.rs  index.rs  intent.rs  lib.rs  mode.rs  policy.rs  run.rs
crates/frameshift-seed/: Cargo.toml
crates/frameshift-seed/src/: main.rs
crates/frameshift-server/: Cargo.toml
crates/frameshift-server/src/: config.rs  error.rs  main.rs  state.rs
crates/frameshift-server/src/middleware/: tracing.rs
crates/frameshift-server/src/routes/: packs.rs
crates/frameshift-server/tests/: integration.rs  publish.rs
crates/frameshift-source/: Cargo.toml
crates/frameshift-source/src/: diff.rs  error.rs  lib.rs  patch.rs  patterns.rs  persona.rs  render.rs  rules.rs  security.rs  skills.rs  source.rs  validate.rs
crates/frameshift-template/: Cargo.toml
crates/frameshift-vault/: Cargo.toml
crates/personify-catalog/: Cargo.toml
crates/personify-catalog-postgres/: Cargo.toml
crates/personify-catalog-postgres/migrations/2026-05-13-000000_initial_schema/: down.sql  up.sql
crates/personify-catalog-postgres/migrations/2026-05-13-000001_search_indexes/: down.sql  up.sql
crates/personify-catalog-postgres/src/: backend.rs  config.rs  errors.rs  lib.rs  models.rs  pool.rs  schema.rs
crates/personify-catalog-postgres/tests/: postgres_integration.rs
crates/personify-catalog/src/: backend.rs  error.rs  filters.rs  identity.rs  lib.rs  records.rs  status.rs
crates/personify-memory/: Cargo.toml
crates/personify-memory-http/: Cargo.toml
crates/personify-memory-http/docs/: WIRE.md
crates/personify-memory-http/src/: adapter.rs  dto.rs  lib.rs  retry.rs  tests.rs
crates/personify-memory-sqlite-fts/: Cargo.toml
crates/personify-memory-sqlite-fts/migrations/: 0001_initial.sql
crates/personify-memory-sqlite-fts/src/: adapter.rs  error.rs  lib.rs  migrate.rs
crates/personify-memory-sqlite-fts/tests/: roundtrip.rs
crates/personify-objects/: Cargo.toml
crates/personify-objects-fs/: Cargo.toml
crates/personify-objects-fs/src/: lib.rs  path.rs  quota.rs  store.rs
crates/personify-objects-fs/tests/: roundtrip.rs
crates/personify-objects/src/: error.rs  health.rs  lib.rs  store.rs
crates/personify-pack/: Cargo.toml
crates/personify-pack/src/: canonical.rs  error.rs  hash.rs  lib.rs  manifest.rs  pack.rs
crates/personify-server/: Cargo.toml
crates/personify-server/src/: config.rs  error.rs  lib.rs  main.rs  router.rs  state.rs
crates/personify-server/src/mcp/: mod.rs
crates/personify-server/src/middleware/: mod.rs  request_id.rs  tracing.rs
crates/personify-server/src/routes/: authors.rs  handles.rs  mod.rs  ops.rs  packs.rs
crates/personify-server/tests/: integration.rs
crates/personify-server/tests/mocks/: catalog.rs  mod.rs  objects.rs
crates/personify-template/: Cargo.toml
crates/personify-template/src/: error.rs  lib.rs  manifest.rs  parse.rs  render.rs
crates/personify-vault/: Cargo.toml
crates/personify-vault-local/: Cargo.toml
crates/personify-vault-local/src/: lib.rs
crates/personify-vault/src/: backend.rs  error.rs  lib.rs  schema.rs  validate.rs
crates/personify-vault/tests/: vault_tests.rs
creative/: AGENTS.md  sync.sh
cryptographic/: AGENTS.md  GROWTH.md  sync.sh
data/: AGENTS.md  GROWTH.md  sync.sh
desktop/: .gitignore  AGENTS.md  GROWTH.md  next.config.ts  package.json  sync.sh  tailwind.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
devops/: AGENTS.md  GROWTH.md  sync.sh
devtools/: AGENTS.md  sync.sh
frontend/: AGENTS.md  sync.sh
gatekeeper/: AGENTS.md  GROWTH.md  sync.sh
lab/: AGENTS.md  sync.sh
marketplace/: package.json
memory/: AGENTS.md  GROWTH.md  sync.sh
performance/: AGENTS.md  sync.sh
personas/: README.md
personas/agents/: pack.toml  sync.sh
personas/api-integrator/: pack.toml
personas/architecture/: pack.toml  sync.sh
personas/bots/: AGENTS.md  GROWTH.md  pack.toml  sync.sh
personas/commit-curator/: pack.toml
personas/creative/: GROWTH.md  pack.toml
personas/cryptographic/: AGENTS.md  pack.toml  sync.sh
personas/daily-planner/: pack.toml
personas/data/: GROWTH.md  pack.toml  sync.sh
personas/database/: pack.toml
personas/dep-updater/: pack.toml
research/: AGENTS.md  GROWTH.md  sync.sh
reviewer/: AGENTS.md  GROWTH.md  sync.sh
rust/: AGENTS.md  GROWTH.md  sync.sh
security/: AGENTS.md  GROWTH.md  sync.sh
systems/: AGENTS.md  GROWTH.md  sync.sh
testing/: AGENTS.md  sync.sh
unreal/: AGENTS.md  sync.sh
writer/: AGENTS.md  sync.sh
(+93 files in other folders)
