[workspace]
resolver = "2"
members = [
    "crates/personify-pack",
    "crates/personify-vault",
    "crates/personify-vault-local",
    "crates/personify-template",
    "crates/personify-memory",
    "crates/personify-memory-http",
    "crates/personify-memory-sqlite-fts",
]

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"

[workspace.dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
unicode-normalization = "0.1"
async-trait = "0.1"
url = { version = "2", features = ["serde"] }
secrecy = { version = "0.8", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tempfile = "3"
zeroize = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
deadpool-sqlite = { version = "0.8", features = ["rt_tokio_1"] }
