[workspace]
resolver = "2"
members = [
    "crates/personify-pack",
    "crates/personify-vault",
    "crates/personify-vault-local",
    "crates/personify-template",
    "crates/personify-memory",
    "crates/personify-memory-http",
    "crates/personify-memory-sqlite-fts",
    "crates/personify-runtime",
    "crates/personify-catalog",
    "crates/personify-catalog-postgres",
    "crates/personify-objects",
    "crates/personify-objects-fs",
    "crates/personify-server",
]

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"

[workspace.dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
unicode-normalization = "0.1"
async-trait = "0.1"
url = { version = "2", features = ["serde"] }
secrecy = { version = "0.8", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tempfile = "3"
zeroize = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
deadpool-sqlite = { version = "0.8", features = ["rt_tokio_1"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
base64 = "0.22"
hex = "0.4"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "compression-gzip", "request-id", "limit", "cors", "set-header"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
diesel = { version = "2.2", features = ["postgres", "chrono", "serde_json", "uuid"] }
diesel-async = { version = "0.5", features = ["postgres", "bb8"] }
diesel_migrations = { version = "2.2", features = ["postgres"] }
bb8 = "0.8"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
figment = { version = "0.10", features = ["env", "toml"] }
mimalloc = "0.1"
