[package]
name = "frameshift-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Thin CLI for the frameshift client engine"

[[bin]]
name = "frameshift"
path = "src/main.rs"

[dependencies]
frameshift-client = { path = "../frameshift-client" }
