[package]
name = "frameshift-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Thin CLI for the frameshift client engine"

[[bin]]
name = "frameshift"
path = "src/main.rs"

[dependencies]
frameshift-client = { path = "../frameshift-client" }
frameshift-source = { path = "../frameshift-source" }
frameshift-growth = { path = "../frameshift-growth" }
frameshift-conformance = { path = "../frameshift-conformance" }
frameshift-orchestrator = { path = "../frameshift-orchestrator" }
clap = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
