[package]
name = "frameshift-client"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Client engine for installing and materializing frameshift packs"

[dependencies]
frameshift-pack = { path = "../frameshift-pack" }
base64.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
