[package]
name = "frameshift-daemon"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Background daemon for Frameshift: file watcher and JSON-RPC 2.0 IPC"

[[bin]]
name = "frameshift-daemon"
path = "src/main.rs"

[dependencies]
frameshift-client = { path = "../frameshift-client" }
frameshift-growth = { path = "../frameshift-growth" }
frameshift-orchestrator = { path = "../frameshift-orchestrator" }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
notify.workspace = true

[dev-dependencies]
tempfile.workspace = true
