[package]
name = "frameshift-mcp"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Minimal MCP stdio server for Frameshift persona operations"

[[bin]]
name = "frameshift-mcp"
path = "src/main.rs"

[dependencies]
frameshift-client = { path = "../frameshift-client" }
frameshift-growth = { path = "../frameshift-growth" }
frameshift-orchestrator = { path = "../frameshift-orchestrator" }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
