[package]
name = "frameshift-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "HTTP server for the frameshift persona marketplace (Layer 6 skeleton)"

[[bin]]
name = "frameshift-server"
path = "src/main.rs"

[dependencies]
frameshift-catalog = { path = "../frameshift-catalog" }
frameshift-catalog-postgres = { path = "../frameshift-catalog-postgres" }
frameshift-objects = { path = "../frameshift-objects" }
frameshift-objects-fs = { path = "../frameshift-objects-fs" }
frameshift-objects-r2 = { path = "../frameshift-objects-r2" }
frameshift-runtime = { path = "../frameshift-runtime" }
frameshift-memory = { path = "../frameshift-memory" }
frameshift-memory-http = { path = "../frameshift-memory-http" }
frameshift-memory-sqlite-fts = { path = "../frameshift-memory-sqlite-fts" }
frameshift-pack = { path = "../frameshift-pack" }
url = { workspace = true }
axum = { workspace = true, features = ["multipart"] }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
secrecy = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
mimalloc = { workspace = true }
figment = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
tempfile = { workspace = true }
tar = "0.4"
flate2 = "1"
hmac = { workspace = true }
sha2 = { workspace = true }
tower_governor = "0.8"

[dev-dependencies]
tokio = { workspace = true }
tower = { workspace = true }
http-body-util = { workspace = true }
tempfile = { workspace = true }
ed25519-dalek = { workspace = true }
tar = "0.4"
flate2 = "1"
