[package]
name = "frameshift-source"
version = "0.1.0"
description = "Structured persona source -- TOML schema, in-memory model, markdown projection, patch ops, semantic diff"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
