[package]
name = "personify-catalog"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Catalog backend trait + canonical types for the personify marketplace"

[dependencies]
personify-pack = { path = "../personify-pack" }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
