[package]
name = "personify-memory-http"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "HTTP-backed MemoryAdapter implementation for personify"

[dependencies]
personify-memory = { path = "../personify-memory" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
secrecy = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
tokio = { version = "1", features = ["time"] }

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
