[package]
name = "personify-objects-fs"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Filesystem-backed content-addressed PackStore adapter"

[dependencies]
personify-objects = { path = "../personify-objects" }
personify-pack = { path = "../personify-pack" }
tokio = { workspace = true }
async-trait = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
