[package]
name = "personify-objects"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Content-addressed pack object store trait + types"

[dependencies]
personify-pack = { path = "../personify-pack" }
async-trait = { workspace = true }
thiserror = { workspace = true }
