[package]
name = "personify-pack"
version = "0.1.0"
description = "Deterministic canonicalization, content addressing, and ed25519 signing for persona packs"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
ed25519-dalek.workspace = true
sha2.workspace = true
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
unicode-normalization.workspace = true

[dev-dependencies]
tempfile = "3"
rand = "0.8"
