[package]
name = "personify-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "HTTP server for the personify persona marketplace (Layer 6 skeleton)"

[[bin]]
name = "personify-server"
path = "src/main.rs"

[dependencies]
personify-catalog = { path = "../personify-catalog" }
personify-objects = { path = "../personify-objects" }
personify-runtime = { path = "../personify-runtime" }
personify-memory = { path = "../personify-memory" }
personify-pack = { path = "../personify-pack" }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
secrecy = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
mimalloc = { workspace = true }
figment = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tower = { workspace = true }
http-body-util = { workspace = true }
