[package]
name = "personify-template"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Template parser and renderer for personify persona files"

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
