[package]
name = "personify-vault-local"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Local age-encrypted file backend for personify-vault"

[dependencies]
personify-vault = { path = "../personify-vault" }
age = { version = "0.10", features = [] }
secrecy = { workspace = true }
thiserror = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
