[package]
name = "personify-vault"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Vault trait and canonical TOML schema for personify"

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
secrecy = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
